terraform/tools/ingress-nginx/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.wouritech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: internal-app-svc
                port:
                  number: 80
