terraform/tools/ingress-nginx/private-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: "174.95.227.234"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - internal.wouritech.com
      secretName: internal-tls-secret
  rules:
    - host: internal.wouritech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: internal-svc
                port:
                  number: 80
